// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`db_meta_modules should have all expected module tables 1`] = `
{
  "moduleNames": [
    "connected_accounts_module",
    "crypto_addresses_module",
    "crypto_auth_module",
    "default_ids_module",
    "emails_module",
    "encrypted_secrets_module",
    "field_module",
    "hierarchy_module",
    "invites_module",
    "levels_module",
    "limits_module",
    "membership_types_module",
    "memberships_module",
    "permissions_module",
    "phone_numbers_module",
    "profiles_module",
    "rls_module",
    "secrets_module",
    "sessions_module",
    "table_template_module",
    "user_auth_module",
    "users_module",
  ],
}
`;

exports[`db_meta_modules should verify all module tables exist in metaschema_modules_public schema 1`] = `
{
  "moduleTablesCount": 22,
  "totalTables": 25,
}
`;

exports[`db_meta_modules should verify emails_module table structure 1`] = `
{
  "columns": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "database_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "private_schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "owner_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "table_name",
      "data_type": "text",
      "is_nullable": "NO",
    },
  ],
}
`;

exports[`db_meta_modules should verify field_module table structure 1`] = `
{
  "columns": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "database_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "private_schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "field_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "node_type",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": "'{}'::jsonb",
      "column_name": "data",
      "data_type": "jsonb",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "triggers",
      "data_type": "ARRAY",
      "is_nullable": "YES",
    },
    {
      "column_default": null,
      "column_name": "functions",
      "data_type": "ARRAY",
      "is_nullable": "YES",
    },
  ],
}
`;

exports[`db_meta_modules should verify module table structures have database_id foreign keys 1`] = `
{
  "constraintCount": 61798,
}
`;

exports[`db_meta_modules should verify module tables have proper foreign key relationships 1`] = `
{
  "constraintCount": 88589,
  "foreignTables": [
    "database",
    "field",
    "schema",
    "table",
  ],
}
`;

exports[`db_meta_modules should verify sessions_module table structure 1`] = `
{
  "columns": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "database_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "sessions_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "session_credentials_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "auth_settings_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "users_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "'30 days'::interval",
      "column_name": "sessions_default_expiration",
      "data_type": "interval",
      "is_nullable": "NO",
    },
    {
      "column_default": "'sessions'::text",
      "column_name": "sessions_table",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": "'session_credentials'::text",
      "column_name": "session_credentials_table",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": "'app_auth_settings'::text",
      "column_name": "auth_settings_table",
      "data_type": "text",
      "is_nullable": "NO",
    },
  ],
}
`;

exports[`db_meta_modules should verify specific module table column defaults 1`] = `
{
  "sessionsDefaults": [
    {
      "column_default": "'app_auth_settings'::text",
      "column_name": "auth_settings_table",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "auth_settings_table_id",
    },
    {
      "column_default": "uuidv7()",
      "column_name": "id",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
    },
    {
      "column_default": "'session_credentials'::text",
      "column_name": "session_credentials_table",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "session_credentials_table_id",
    },
    {
      "column_default": "'30 days'::interval",
      "column_name": "sessions_default_expiration",
    },
    {
      "column_default": "'sessions'::text",
      "column_name": "sessions_table",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "sessions_table_id",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "users_table_id",
    },
  ],
  "usersDefaults": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "table_id",
    },
    {
      "column_default": "'users'::text",
      "column_name": "table_name",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "type_table_id",
    },
    {
      "column_default": "'role_types'::text",
      "column_name": "type_table_name",
    },
  ],
}
`;

exports[`db_meta_modules should verify table_template_module table structure 1`] = `
{
  "columns": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "database_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "private_schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "owner_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "table_name",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "node_type",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": "'{}'::jsonb",
      "column_name": "data",
      "data_type": "jsonb",
      "is_nullable": "NO",
    },
  ],
}
`;

exports[`db_meta_modules should verify users_module table structure 1`] = `
{
  "columns": [
    {
      "column_default": "uuidv7()",
      "column_name": "id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": null,
      "column_name": "database_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "schema_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "'users'::text",
      "column_name": "table_name",
      "data_type": "text",
      "is_nullable": "NO",
    },
    {
      "column_default": "uuid_nil()",
      "column_name": "type_table_id",
      "data_type": "uuid",
      "is_nullable": "NO",
    },
    {
      "column_default": "'role_types'::text",
      "column_name": "type_table_name",
      "data_type": "text",
      "is_nullable": "NO",
    },
  ],
}
`;
